# edgevault-ai

./: .env.example  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/core/: auth.py  config.py  database.py  events.py
backend/app/repositories/: assistant.py  document_embeddings.py  document_extractions.py  document_type_rules.py  extraction_corrections.py  financial_records.py  search.py  uploads.py  vendor_rules.py
backend/app/schemas/: assistant.py  auth.py  document_extractions.py  financial_records.py  search.py  uploads.py  vendor_rules.py
backend/app/services/: document_extraction.py  financial_extraction.py  search.py  uploads.py  vendor_rules.py
backend/db/migrations/: 0001_create_resume_uploads.sql  0002_create_document_extractions.sql  0002_generalize_upload_mime_type.sql  0003_add_upload_display_filename.sql  0003_create_financial_records.sql  0004_create_vendor_rules.sql  0005_seed_vendor_rules.sql  0006_add_document_search.sql  0007_create_document_embeddings.sql  0008_create_assistant_queries.sql  0009_add_assistant_query_source.sql  0010_create_extraction_corrections.sql  0011_create_workspaces.sql  0012_add_extraction_corrections_workspace.sql  0013_document_type_learning.sql  0014_seed_demo_vendor_rules.sql  (+1 more)
backend/scripts/: embed_corpus.py  eval_extraction.py  export_dataset.py  migrate.py  probe_llm.py
backend/tests/: test_financial_extraction.py  test_health.py
frontend/: Dockerfile  (+3 more)
(+90 files in other folders)
