[project]
name = "edgevault-backend"
version = "0.1.0"
description = "FastAPI backend for EdgeVault AI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.116.0",
    "pydantic-settings>=2.10.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.3.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
