[project]
name = "edgevault-backend"
version = "0.1.0"
description = "FastAPI backend for EdgeVault AI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.116.0",
    "pydantic-settings>=2.10.0",
    "pillow>=11.0.0",
    "pymupdf>=1.24.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.0",
    "fastembed>=0.8.0",
    "pgvector>=0.4.2",
    "httpx>=0.28.1",
    "sse-starlette>=2.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pytest>=8.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
